[tool.poetry]
name = "verification-system"
version = "0.1.0"
description = "KYC/KYB verification automation system"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pydantic = {extras = ["email"], version = "^1.10.7"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.12"}
asyncpg = "^0.27.0"
aiomysql = "^0.1.1"
alembic = "^1.10.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
email-validator = "^2.0.0"
boto3 = "^1.26.129"
httpx = "^0.24.0"
tenacity = "^8.2.2"

pdf2image = "^1.16.0"
PyMuPDF = "^1.20.0"  # A lighter alternative that doesn't require poppler
python-magic = "^0.4.27"  # For MIME type detection

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"